title overlapping fixed

--- a/src/components/MediaList/MediaList.scss
+++ b/src/components/MediaList/MediaList.scss
@@ -66,7 +66,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    line-height: 0;
     text-overflow: ellipsis;
     margin-block-end: 0;
 
